--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node & build output
 node_modules
 dist
 dist-ssr
 *.local
+
+# Firebase & Env files
+firebase.config.js
+.env
 
 # Editor directories and files
 .vscode/*
