--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "firebase": "^11.8.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
+    "react-awesome-reveal": "^4.3.1",
+    "react-clock": "^5.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
